# fallacy-clone

./: Cargo.toml  README.md  build.rs
fallacy-clone-derive/: Cargo.toml  README.md
fallacy-clone-derive/src/: lib.rs
src/: lib.rs
tests/: derive.rs
