[package]
name = "fallacy-clone"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for fallible clone."
keywords = ["fallible", "clone", "try-clone"]
repository = "https://github.com/fallacy-rs/fallacy-clone.git"
homepage = "https://github.com/fallacy-rs/fallacy-clone"
documentation = "https://docs.rs/fallacy-clone/"

[features]
derive = ["fallacy-clone-derive"]

[dependencies]
fallacy-alloc = "0.1.0"
fallacy-clone-derive = { path = "./fallacy-clone-derive", version = "0.1.0", optional = true }

[build-dependencies]
rustversion = "1.0.6"
