[package]
name = "fallacy-clone-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Derive macro crate for fallacy-clone."
keywords = ["fallible", "clone", "try-clone"]
repository = "https://github.com/fallacy-rs/fallacy-clone.git"
homepage = "https://github.com/fallacy-rs/fallacy-clone"
documentation = "https://docs.rs/fallacy-clone-derive/"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.89"
quote = "1.0.16"
proc-macro2 = "1.0.36"
